# Platformer

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: appmgr.cpp  appmgr.hpp  init.cpp  init.hpp  main.cpp
